desktop is finishe stil working on mobile was having teriminal error issues

--- a/css/index.css
+++ b/css/index.css
@@ -170,8 +170,9 @@ p {
 .navtop .navigation {
   padding: 15px;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .navtop h1 {
   font-size: 3.5rem;
@@ -199,6 +200,7 @@ footer {
 }
 .home .intro img {
   border-radius: 10px;
+  width: 100%;
 }
 .home .intro h2 {
   padding: 15px;
@@ -217,8 +219,24 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .sky {
+    display: none;
+  }
+  .home .space-images .launch {
+    display: none;
+  }
+  .home .space-images .blast {
+    width: 90%;
+  }
+}
 .home .visit-planets {
   padding: 15px;
+}
+@media (max-width: 500px) {
+  .home .visit-planets {
+    width: 100%;
+  }
 }
 .home .visit-planets h3 {
   margin-top: 11px;
@@ -233,8 +251,21 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -246,8 +277,31 @@ footer {
   width: 46%;
   margin-left: 4%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 90%;
+  }
+}
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+.btn {
+  width: 35%;
+  padding: 3% 5%;
+  text-align: center;
+  border-radius: 10px;
+  color: white;
+  background-color: #22283A;
+  font-size: 20px;
+}
+@media (max-width: 500px) {
+  .btn {
+    width: 100%;
+  }
+}
+.btn:hover {
+  background-color: white;
+  color: #22283A;
 }
