--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,7 @@
 // Home Content
+// body{
+//   margin: 1%;
+// }
 
 .home {
 
@@ -7,6 +10,7 @@
 
     img{
       border-radius: 10px;
+      width: 100%
 
     }
     h2 {
@@ -24,16 +28,33 @@
     flex-wrap: wrap;
     width: 100%;
 
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
     }
+
+    @media @phone {
+      .sky{
+        display: none;
+      }
+       .launch{
+        display: none;
+      }
+      .blast {
+        width: 90%;
+      }
+    }
   }
 
   .visit-planets {
     padding: 15px;
+
+    @media @phone {
+      width: 100%;
+    }
 
     h3 {
       margin-top: 11px;
@@ -51,8 +72,16 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      .center();
+      flex-direction: column-reverse;
+    }
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -62,13 +91,17 @@
         margin-bottom: 26px;
       }
 
-      .btn {
-      }
+      // .btn {
+      // }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 90%;
+
+      }
 
       img {
         width: 100%;
@@ -78,3 +111,22 @@
     }
   }
 }// home
+
+
+.btn {
+  .buti(35%, 3% 5%);
+  text-align: center;
+  border-radius: 10px;
+  .bbuttonstyle();
+
+  @media @phone {
+    width: 100%;
+  }
+  // @media @mobile {
+  //  width: 100%;
+  //  }
+  &:hover {
+          background-color: white;
+          color: @btn-bg-color;
+        }
+}
