--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,35 +1,5 @@
 // Navigation code here
 
-// .header {
-//   width: 100%;
-//   border-bottom: 2px dashed silver;
-//   .flexi(space-around, center);
-//   flex-direction: row;
-//   padding: 25px;
-//   margin: 0 auto;
-//
-//     // h1{
-//     //     margin-left: 10px 0;
-//     // }
-//     @media @mobile {
-//           .flexi(center, center);
-//           flex-direction: column;
-//
-//         }
-//
-//    nav {
-//     .flexi(space-around);
-//     font-size: 1.6rem;
-//     // padding-right: 10px 0;
-//
-//       a {
-//       padding: 0 20px;
-//       text-decoration: none;
-//       color: black;
-//       }
-//
-//   }
-
 .navtop{
   width: 100%;
   height: 90px;
@@ -42,9 +12,8 @@
 
   .navigation{
     padding: 15px;
-    display: flex;
+    .center();
     flex-direction: column;
-    align-items: center;
   }
 
 h1{
